# MJ1GPT-CODEX

./: .README.md.swp  .env.example  CLOUD.md  CONTRIBUTING.md  DOCKER.md  README.md  chatmock.py  pyproject.toml
Formula/: chatmock.rb
chatmock/: admin.py  api_keys.py  app.py  auth_store.py  cli.py  oauth_flow.py  routes_ollama.py  routes_openai.py  settings.py  upstream.py  utils.py
chatmock/templates/: admin_auth.html  admin_keys.html  admin_login.html  admin_panel.html
docker/: entrypoint.sh
