[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mj1gpt-codex"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.8.3",
    "click==8.2.1",
    "flask==3.1.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "requests==2.32.5",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
]

[project.scripts]
chatmock = "chatmock.cli:main"

[tool.setuptools.packages.find]
include = ["chatmock*"]

[tool.setuptools.package-data]
chatmock = ["prompt.md", "prompt_gpt5_codex.md", "templates/*.html"]
